# rocqiomics

./: .gitignore  README.md  __init__.py  constants.py  dataset.py  feature_extractor.py  personal_utils.py  pyproject.toml  radscore.py  rocqiomics.py  transforms.py  tutorial.ipynb  utils.py
mask_utils/: mask_processor.py
rocqiomics/: __init__.py  dataset.py  extraction_engines.py  input_validation.py  radscore.py  rocqiomics.py  transforms.py  utils.py
rocqiomics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rocqiomics/extraction_engines/: pyradiomics.py
rocqiomics/habitat_generator/: clustering_algorithm_base.py  clustering_algorithms.py  habitat_generator.py  radiomics_habitat_generator.py
rocqiomics/personal_utils/mask_utils/: obj_parser.py
test_data/Masks/Snickers/: d1_T2_RGS021425_ph2.seg.nrrd  d1_T2_RGS021425_ph4.seg.nrrd  d1_T2_RGS021425_ph5.seg.nrrd  d5_T2_RGS021425_ph4.seg.nrrd  d5_T2_RGS021425_ph5.seg.nrrd
test_data/Masks/Snickers2D/: d1_T2_RGS021425_ph1.seg.nrrd
tutorial/: feature_extraction.ipynb  feature_extraction_tutorial.ipynb  feature_map_tutorial.ipynb  habitat_generation.ipynb  tutorial.ipynb
tutorial/test_data/Masks/: d1_T2_RGS021425_ph1.seg.nrrd  d1_T2_RGS021425_ph3.seg.nrrd  d5_T2_RGS021425_ph1.seg.nrrd  d5_T2_RGS021425_ph2.seg.nrrd  (+2 more)
tutorial/tutorial_results/: d1_T2_Snickers.xlsx  d1_T2_Snickers_Ricardo.xlsx  d5_T2_Snickers.xlsx  d5_T2_Snickers_Ricardo.xlsx  d8_T2_Snickers_Ricardo.xlsx
tutorial_results/: d1_T2_Snickers_Ricardo.xlsx  d5_T2_Snickers_Ricardo.xlsx  d8_T2_Snickers_Ricardo.xlsx
(+319 files in other folders)
