[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rocqiomics"
version = "1.0.0"
description = "Deep learning and augmentation-friendly radiomics library."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ricardo Garcia Santiago", email = "ricardo.j.garcia.s@gmail.com }
]

